--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="./css folder/cssregistration.css"
+      href="./cssregistration.css"
     />
   </head>
 
