--- a/html/logininterface.html
+++ b/html/logininterface.html
@@ -1,31 +1,53 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Adun Codes</title>
     <link rel="stylesheet" type="text/css" href="../css folder/cssLogin.css" />
-</head>
+  </head>
 
-<body>
-    <div class=heading>
-        <div class="image-div">
-            <img src="../images/image.jpg" alt="image" srcset="">
-        </div>
-        <div class=form1>
-            <h3>Welcome to Adun Codes</h3>
-            <form action="" name="Login" id="login" onsubmit="processForm()">
-                <input name="email" type="email" placeholder="E-mail Address" id="email" required="required" /></title><br />
-                <input type="password" name="password" placeholder="password" id="password" required/><br/>
-                <p>Forgot Password? Click <a href="./forgotpassword.html">here</a> to reset</p>
-                <input id="signIn" name="signIn" type="submit" value="Sign me in" />
-                <p>Not a member yet? Click <a href="../index.html">here</a> to register. </p>
-            </form>
-        </div>
-        <div style="clear: both;"></div>
+  <body>
+    <div class="heading">
+      <div class="image-div">
+        <img src="../images/image.jpg" alt="image" />
+      </div>
+
+      <div class="form1">
+        <h3>Welcome to Adun Codes</h3>
+        <p id="error-message"/>
+        <form action="" name="Login" id="login" >
+          <input
+            name="email"
+            type="email"
+            placeholder="E-mail Address"
+            id="email"
+            required
+          />
+
+          <input
+            type="password"
+            name="password"
+            placeholder="Password"
+            id="password"
+            required
+          />
+
+          <p>
+            Forgot Password? Click <a href="./forgotpassword.html">here</a> to
+            reset
+          </p>
+
+          <input id="signIn" name="signIn" type="submit" value="Sign me in" />
+
+          <p>
+            Not a member yet? Click <a href="../index.html">here</a> to
+            register.
+          </p>
+        </form>
+      </div>
     </div>
-</body>
-
+    <script src="../index.js"></script>
+  </body>
 </html>
