change profile details

--- a/html/main.html
+++ b/html/main.html
@@ -63,8 +63,11 @@
 
       <!-- SIGN UP SECTION -->
       <section>
-        <h1 class="text-center">SIGN UP FOR FREE Adun Codes ACCOUNT</h1>
-        <a class="text-center" href="./registration.html">GET STARTED</a>
+        <h1 class="text-center">SIGN UP FOR FREE</h1>
+        <div class="get_started_button_container">
+
+          <a class="text-center get_started_button" href="./registration.html">GET STARTED</a>
+        </div>
 
         <div class="price_plan_container">
           <p id="plan">Price and Plan</p>
@@ -130,21 +133,21 @@
           </article>
           <ul class="twitter">
             <li>
-              <a href="http://twitter.com/isiakabd"
+              <a href="http://twitter.com/agbokefolashade"
                 ><img
                   src="https://cdn3.iconfinder.com/data/icons/basicolor-reading-writing/24/077_twitter-512.png"
                   alt="twitter"
               /></a>
             </li>
             <li>
-              <a href="http://facebook.com/isiakabd"
+              <a href="http://facebook.com/agbokefolashade"
                 ><img
                   src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/facebook_circle_color-512.png"
                   alt="facebook"
               /></a>
             </li>
             <li>
-              <a href="http://Instagram.com/isiakabd"
+              <a href="http://Instagram.com/agbokefolashade"
                 ><img
                   src="https://cdn3.iconfinder.com/data/icons/social-network-30/512/social-03-512.png"
                   alt="Instagram"
