added sticky header

--- a/html/main.html
+++ b/html/main.html
@@ -205,5 +205,6 @@ Message</textarea
     </div>
 
     <div style="clear: left"></div>
+    <script src="../js/main.js"></script>
   </body>
 </html>
